# atsamd-demo

./: .embed.toml  Cargo.toml  README.md  build.rs  memory.x  openocd.cfg  openocd.gdb
.cargo/: config
c-code/: AtmelStart.gpdsc  atmel_start_config.atstart  atmel_start_pins.h  driver_init.c  driver_init.h  test-size.c
c-code/config/: hpl_gclk_config.h  hpl_osc32kctrl_config.h  hpl_oscctrl_config.h  hpl_sercom_config.h  hpl_tc_config.h  hpl_wdt_config.h  peripheral_clk_config.h
c-code/examples/: driver_examples.c  driver_examples.h
c-code/hpl/core/: hpl_init.c
c-code/hpl/rtc/: rtc_lite.c  rtc_lite.h
c-code/hpl/sercom/: hpl_sercom.c
c-code/hpl/tc/: hpl_tc.c
examples/: icm-clockv1.rs  icm-clockv2.rs  small.rs  small.rs.orig
src/: lib.rs  main.rs  uart.rs
