[package]
name = "atsamd-demo"
version = "0.1.0"
authors = ["Henrik Tjäder <henrik@grepit.se>"]
edition = "2018"
default-run = "demo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "demo"

[[bin]]
name = "demov1"


[dependencies]
cortex-m = "0.7.3"
cortex-m-rtic = "1.0.0"
dwt-systick-monotonic = "1.0"
cfg-if = "1.0"
heapless = "0.7"

[dependencies.atsamd-hal]
git = "https://github.com/vcchtjader/atsamd.git"
branch = "clocking-api-v2"
#path = "../atsamd-bradley/hal/"
version = "0.14.0"
features = ["same51n-rt", "unproven"]

[profile.release]
debug = true
lto = true
