[package]
name = "atsamd-demo"
version = "0.1.0"
authors = [
  "Henrik Tjäder <henrik@grepit.se>",
  "Gabriel Górski <gabriel.gorski@grepit.se>"
]
edition = "2018"
default-run = "demo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "demo"
required-features = ["clockv2"]

[[bin]]
name = "demov1"
required-features = ["clockv1"]

[[bin]]
name = "aes"
required-features = ["hal-aes"]

[[bin]]
name = "icm"
required-features = ["clockv1"]

[dependencies]
cortex-m = "0.7.3"
cortex-m-rtic = "1.0.0"
dwt-systick-monotonic = "1.0"
cfg-if = "1.0"
heapless = "0.7"

# AES example
generic-array = "0.14.4"
aes = "0.7.5"
cipher = "0.3.0"
ctr = "0.8.0"
cmac = "0.6.0"

[dependencies.atsamd-hal-clockv1]
package = "atsamd-hal"
optional = true
version = "0.14.0"
features = ["same51n-rt", "unproven"]

[dependencies.atsamd-hal]
package = "atsamd-hal"
optional = true
git = "https://github.com/vcchtjader/atsamd.git"
branch = "clocking-api-v2"
version = "0.14.0"
features = ["same51n-rt", "unproven"]

[dependencies.atsamd-hal-aes]
package = "atsamd-hal"
optional = true
git = "https://github.com/vcchtjader/atsamd.git"
branch = "aes"
#path = "../atsamd-bradley/hal/"
version = "0.14.0"
features = ["same51n-rt", "unproven", "enable_unsafe_aes_newblock_cipher"]

[profile.release]
debug = true
lto = true

[features]
default = ["clockv2"]
clockv1 = ["atsamd-hal-clockv1"]
clockv2 = ["atsamd-hal"]
hal-aes = ["atsamd-hal-aes"]
