[package]
name = "atsamd-demo"
version = "0.1.0"
authors = ["Henrik Tjäder <henrik@grepit.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.2"
cortex-m-rtic = "0.6.0-alpha.2"

[dependencies.atsamd-hal]
git = "https://github.com/atsamd-rs/atsamd.git"
branch = "master"
features = ["same51n-rt", "unproven"]

[profile.dev]
opt-level = 0

[profile.release]
debug = true
lto = true
